# cmake-basics

./: .gitignore  README.md
adding-library/: CMakeLists.txt  README.md
adding-library/src/: CMakeLists.txt
adding-library/src/math_tools/: CMakeLists.txt  math_tools.cpp  math_tools.h
basic-starting-point/: CMakeLists.txt  README.md  tutorial.cxx
cmake-examples/using-cuda-library/: CMakeLists.txt  README.md
cmake-examples/using-cuda-library/cuda-executable/: CMakeLists.txt  main.cpp
cmake-examples/using-cuda-library/cuda-library/: cudalibrary.h
cmake-templates/cuda-executable/: CMakeLists.txt  README.md
cmake-templates/cuda-library/: README.md  cudalibrary.cpp  kernel.cu  kernel.cuh
cmake-templates/openmp-executable/: CMakeLists.txt  README.md  hello.cpp
